--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "husky": "^4.2.5",
     "node-sass": "^4.14.1",
     "postcss-cli": "^7.1.2",
+    "postcss-import": "^12.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
