--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^5.6.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,7 +11,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "antd": "^4.6.2",
     "autoprefixer": "^9.8.6",
+    "craco-less": "^1.17.0",
     "husky": "^4.2.5",
     "node-sass": "^4.14.1",
     "postcss-cli": "^7.1.2",
@@ -23,10 +26,10 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "npm run watch:css && react-scripts start",
-    "build": "npm run build:css && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "npm run watch:css && craco start",
+    "build": "npm run build:css && craco build",
+    "test": "craco test",
+    "eject": "craco eject",
     "build:css": "postcss src/styles/global.scss -o src/styles/main.scss",
     "watch:css": "postcss src/styles/global.scss -o src/styles/main.scss"
   },
