--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "test": "craco test",
     "eject": "craco eject",
     "build:css": "postcss src/styles/global.scss -o src/styles/main.scss",
-    "watch:css": "postcss src/styles/global.scss -o src/styles/main.scss"
+    "watch:css": "postcss src/styles/global.scss -o src/styles/main.scss",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,7 +51,16 @@
     ]
   },
   "devDependencies": {
-    "cz-conventional-changelog": "3.3.0"
+    "@babel/core": "^7.11.6",
+    "@storybook/addon-actions": "^6.0.21",
+    "@storybook/addon-essentials": "^6.0.21",
+    "@storybook/addon-links": "^6.0.21",
+    "@storybook/node-logger": "^6.0.21",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.21",
+    "babel-loader": "^8.1.0",
+    "cz-conventional-changelog": "3.3.0",
+    "react-is": "^16.13.1"
   },
   "config": {
     "commitizen": {
