--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@storybook/addon-essentials": "^6.0.21",
     "@storybook/addon-links": "^6.0.21",
     "@storybook/node-logger": "^6.0.21",
+    "@storybook/preset-ant-design": "^0.0.1",
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.21",
     "babel-loader": "^8.1.0",
