--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.6.2",
     "autoprefixer": "^9.8.6",
     "craco-less": "^1.17.0",
+    "date-fns": "^2.16.1",
     "framer-motion": "^2.6.6",
     "husky": "^4.2.5",
     "node-sass": "^4.14.1",
