--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "watch:css": "postcss src/styles/global.scss -o src/styles/main.scss",
     "storybook": "start-storybook -p 6006 -s public",
     "sb": "npm run storybook",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "npx chromatic --project-token nrlw0uomdbs"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -65,6 +66,7 @@
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.21",
     "babel-loader": "^8.1.0",
+    "chromatic": "^5.1.0",
     "cz-conventional-changelog": "3.3.0",
     "react-is": "^16.13.1"
   },
